@@ -1,6 +1,6 @@
 plugins {
     java
-    id("org.springframework.boot") version "4.0.5"
+    id("org.springframework.boot") version "4.0.6"
     id("io.spring.dependency-management") version "1.1.7"
 }
 
@@ -23,9 +23,9 @@ val opentelemetryVersion by extra("2.21.0-alpha")
 
 dependencies {
     implementation("org.springframework.cloud:spring-cloud-config-server")
-    implementation("org.springframework.boot:spring-boot-starter-opentelemetry")
     implementation("org.springframework.boot:spring-boot-starter-actuator")
     implementation("org.springframework.boot:spring-boot-starter-security")
+    implementation("org.springframework.boot:spring-boot-starter-opentelemetry")
     implementation("io.opentelemetry.instrumentation:opentelemetry-logback-appender-1.0:${opentelemetryVersion}")
     testImplementation("org.springframework.boot:spring-boot-starter-actuator-test")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
@@ -39,4 +39,21 @@ dependencyManagement {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+}
+
+tasks.named<org.springframework.boot.gradle.tasks.run.BootRun>("bootRun") {
+    jvmArgs("--sun-misc-unsafe-memory-access=allow")
+}
+
+tasks.register<JavaExec>("generateCds") {
+    group = "optimization"
+    description = "Generates a CDS archive for faster startup."
+    dependsOn(tasks.bootJar)
+
+    classpath = files(tasks.bootJar.get().archiveFile)
+    mainClass.set("org.springframework.boot.loader.launch.JarLauncher")
+    jvmArgs(
+        "-Dspring.context.exit=onRefresh",
+        "-XX:ArchiveClassesAtExit=${project.layout.buildDirectory.get()}/libs/application.jsa"
+    )
 }
